--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "symfony/framework-bundle": "~2.1",
         "symfony/security": "~2.1",
         "symfony/form": "~2.1",
-        "symfony/validator": "~2.1",
+        "symfony/validator": "~2.1"
     },
     "minimum-stability": "dev",
     "autoload": {
