--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dmishh/settings-bundle",
-    "description": "",
+    "description": "Database centric Symfony2 configuration management. Global and per-user settings supported.",
     "keywords": ["symfony2", "bundle", "configuration", "settings"],
     "homepage": "https://github.com/dmishh/SettingsBundle",
     "type": "symfony-bundle",
@@ -12,12 +12,17 @@
         }
     ],
     "require": {
+        "php": ">=5.3.3",
         "symfony/framework-bundle": "~2.1",
         "symfony/security": "~2.1",
         "symfony/form": "~2.1",
-        "symfony/validator": "~2.1"
+        "symfony/validator": "~2.1",
+        "doctrine/orm": "~2.2,>=2.2.3"
     },
-    "minimum-stability": "dev",
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "mockery/mockery": "dev-master@dev"
+    },
     "autoload": {
         "psr-0": { "": "src/" }
     },
