--- a/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
+++ b/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
@@ -1,23 +1,17 @@
 services:
-    settings.manager:
+    dmishh_settings.manager:
         class: Dmishh\Bundle\SettingsBundle\Manager\SettingsManager
         arguments:
             - @doctrine.orm.entity_manager
-            - { setting_names: %settings.manager.setting_names%}
+            - { settings_configuration: %dmishh_settings.manager.settings% }
 
-#    recaptcha:
-#        class: Recaptcher\Recaptcha
-#        arguments: [%recaptcha.public_key%, %recaptcha.private_key%, %recaptcha.use_https%]
-#
-#    form.type.recaptcha:
-#        class: Dmishh\Bundle\RecaptchaBundle\Form\Type\RecaptchaType
-#        arguments: [@recaptcha]
-#        tags:
-#            - { name: form.type, alias: recaptcha }
-#
-#    form.validator.recaptcha:
-#        class: Dmishh\Bundle\RecaptchaBundle\Validator\Constraints\RecaptchaValidator
-#        scope: request
-#        arguments: [@recaptcha, @request]
-#        tags:
-#            - { name: validator.constraint_validator, alias: recaptcha }
+    form.type.dmishh_settings:
+        class: Dmishh\Bundle\SettingsBundle\Form\Type\SettingsType
+        arguments: [%dmishh_settings.manager.settings%]
+        tags:
+            - { name: form.type, alias: dmishh_settings }
+
+    form.type.dmishh_setting:
+        class: Dmishh\Bundle\SettingsBundle\Form\Type\SettingType
+        tags:
+            - { name: form.type, alias: dmishh_setting }
