--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dmishh/settings-bundle",
-    "description": "Database centric Symfony2 configuration management. Global and per-user settings supported. Just works.",
+    "description": "Database centric Symfony2 configuration management. Global and per-user settings supported. It just works.",
     "keywords": ["symfony2", "bundle", "config", "configuration", "settings"],
     "homepage": "https://github.com/dmishh/SettingsBundle",
     "type": "symfony-bundle",
