--- a/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
+++ b/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
@@ -4,7 +4,16 @@ services:
         arguments:
             - @doctrine.orm.entity_manager
             - %settings_manager.settings%
-            - %settings_manager.serialization%
+            - @dmishh.settings.serializer
+
+    dmishh.settings.serializer_factory:
+        class: Dmishh\Bundle\SettingsBundle\Serializer\SerializerFactory
+
+    dmishh.settings.serializer:
+        class: Dmishh\Bundle\SettingsBundle\Serializer\SerializerInterface
+        factory_service: dmishh.settings.serializer_factory
+        factory_method: create
+        arguments: [%settings_manager.serialization%]
 
     form.type.settings_management:
         class: Dmishh\Bundle\SettingsBundle\Form\Type\SettingsType
