--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ language: php
 php:
   - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+  - hhvm
 
-before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
+before_install:
+  - composer self-update
+
+install:
+  - composer install
+
+script:
   - phpunit
