--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/form": "~2.1,!=2.5.0",
         "symfony/validator": "~2.1,!=2.5.0",
         "symfony/translation": "~2.1,!=2.5.0",
-        "doctrine/orm": "~2.2,>=2.2.3"
+        "doctrine/orm": "~2.2,>=2.2.3,<2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
@@ -39,5 +39,8 @@
         "branch-alias": {
             "dev-master": "2.0.x-dev"
         }
+    },
+    "suggest": {
+        "doctrine/doctrine-cache-bundle": "If you want to add caching to your settings"
     }
 }
