--- a/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
+++ b/src/Dmishh/Bundle/SettingsBundle/Resources/config/services.yml
@@ -1,10 +1,17 @@
 services:
-    settings_manager:
+    dmishh.settings.settings_manager:
         class: Dmishh\Bundle\SettingsBundle\Manager\SettingsManager
         arguments:
             - @doctrine.orm.entity_manager
             - %settings_manager.settings%
             - @dmishh.settings.serializer
+
+    settings_manager:
+      alias: dmishh.settings.settings_manager
+
+    dmishh.settings.cached_manager:
+        class: Dmishh\Bundle\SettingsBundle\Manager\CachedManager
+        arguments: [@dmishh.settings.settings_manager, %dmishh.settings.cache.lifetime%]
 
     dmishh.settings.serializer_factory:
         class: Dmishh\Bundle\SettingsBundle\Serializer\SerializerFactory
