--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "doctrine/orm": "~2.2,>=2.2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
+        "phpunit/phpunit": "~4.6",
         "mockery/mockery": "dev-master@dev"
     },
     "autoload": {
