--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
-        "mockery/mockery": "0.9.*"
+        "mockery/mockery": "0.9.*",
+        "doctrine/orm": "<2.5"
     },
     "autoload": {
         "psr-0": { "": "src/" }
