--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
-        "mockery/mockery": "0.9.*",
-        "doctrine/orm": "<2.5"
+        "mockery/mockery": "0.9.*"
     },
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": { "Dmishh\\SettingsBundle\\": "" }
     },
     "extra": {
         "branch-alias": {
