--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "^5.5.9|^7.0",
         "psr/cache": "^1.0",
-        "symfony/framework-bundle": "~2.3,!=2.5.0",
-        "doctrine/orm": "~2.2,>=2.2.3"
+        "symfony/framework-bundle": "^2.3|^3.0",
+        "doctrine/orm": "^2.2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.6",
-        "mockery/mockery": "0.9.*"
+        "phpunit/phpunit": "^4.6",
+        "mockery/mockery": "^0.9"
     },
     "autoload": {
         "psr-4": { "Dmishh\\SettingsBundle\\": "" }
