--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 sudo: false
+
 language: php
+
+cache:
+    directories:
+        - $HOME/.composer/cache/files
+
 php:
   - 5.3
   - 5.4
@@ -8,11 +14,26 @@ php:
   - 7.0
   - hhvm
 
+matrix:
+    include:
+        - php: 5.3
+          env: SYMFONY_VERSION=2.3.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.7.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.0.*
+        - php: 7.0
+          env: SYMFONY_VERSION=3.0.*
+
+env:
+    - SYMFONY_VERSION=2.8.*
+
 before_install:
   - travis_retry composer self-update
 
 install:
-  - composer install --ignore-platform-reqs
+  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
+  - composer update
 
 script:
   - phpunit
