--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,9 +14,8 @@
         bootstrap                   = "./vendor/autoload.php" >
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>src/*/*Bundle/Tests</directory>
-            <directory>src/*/Bundle/*Bundle/Tests</directory>
+        <testsuite name="SettingsBundle Test Suite">
+            <directory>./Tests</directory>
         </testsuite>
     </testsuites>
 
@@ -28,12 +27,10 @@
 
     <filter>
         <whitelist>
-            <directory>src</directory>
+            <directory>./</directory>
             <exclude>
-                <directory>src/*/*Bundle/Resources</directory>
-                <directory>src/*/*Bundle/Tests</directory>
-                <directory>src/*/Bundle/*Bundle/Resources</directory>
-                <directory>src/*/Bundle/*Bundle/Tests</directory>
+                <directory>./Resources</directory>
+                <directory>./Tests</directory>
             </exclude>
         </whitelist>
     </filter>
