--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - travis_retry composer self-update
 
 install:
-  - composer install --ignore-platform-reqs
+  - composer update
 
 script:
   - phpunit
