--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -18,8 +18,7 @@ services:
 
     dmishh.settings.serializer:
         class: Dmishh\SettingsBundle\Serializer\SerializerInterface
-        factory_service: dmishh.settings.serializer_factory
-        factory_method: create
+        factory: ['@dmishh.settings.serializer_factory', create]
         arguments: [%settings_manager.serialization%]
 
     form.type.settings_management:
