Added tests for our services

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,4 +35,7 @@
         </whitelist>
     </filter>
 
+    <php>
+        <server name="KERNEL_DIR" value="./Tests/Resources/app" />
+    </php>
 </phpunit>
