--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.6",
-        "mockery/mockery": "0.9.*"
+        "mockery/mockery": "0.9.*",
+        "doctrine/doctrine-bundle": "~1.2",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^0.7"
     },
     "autoload": {
         "psr-4": { "Dmishh\\SettingsBundle\\": "" }
