--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,32 +5,32 @@ services:
     dmishh.settings.settings_manager:
         class: Dmishh\SettingsBundle\Manager\SettingsManager
         arguments:
-            - @doctrine.orm.entity_manager
-            - @dmishh.settings.serializer
-            - %settings_manager.settings%
+            - "@doctrine.orm.entity_manager"
+            - "@dmishh.settings.serializer"
+            - "%settings_manager.settings%"
 
     dmishh.settings.cached_settings_manager:
         class: Dmishh\SettingsBundle\Manager\CachedSettingsManager
-        arguments: [@dmishh.settings.settings_manager, ~, ~]
+        arguments: ["@dmishh.settings.settings_manager", ~, ~]
 
     dmishh.settings.serializer_factory:
         class: Dmishh\SettingsBundle\Serializer\SerializerFactory
 
     dmishh.settings.serializer:
-        class: Dmishh\SettingsBundle\Serializer\SerializerInterface
+        class: Dmishh\SettingsBundle\Serializer\PhpSerializer
         factory: ['@dmishh.settings.serializer_factory', create]
         arguments: [%settings_manager.serialization%]
 
     form.type.settings_management:
         class: Dmishh\SettingsBundle\Form\Type\SettingsType
         arguments:
-            - %settings_manager.settings%
+            - "%settings_manager.settings%"
         tags:
             - { name: form.type, alias: settings_management }
 
     twig.extension.settings_extension:
         class: Dmishh\SettingsBundle\Twig\SettingsExtension
         arguments:
-            - @settings_manager
+            - "@settings_manager"
         tags:
             - { name: twig.extension }
