Added Richard van Laak as author

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
             "homepage": "https://github.com/Nyholm"
         },
         {
-            "name": "Artem Zhuravlov",
-            "homepage": "https://github.com/azhuravlov"
+            "name": "Richard van Laak",
+            "homepage": "https://github.com/rvanlaak"
         }
     ],
     "require": {
