--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
 
 install:
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
+  - composer require symfony/form:${SYMFONY_VERSION} --no-update
   - composer update
 
 script:
