--- a/composer.json
+++ b/composer.json
@@ -20,25 +20,27 @@
         }
     ],
     "require": {
-        "php": "^5.5.9|^7.0",
+        "php": "^7.2",
         "psr/cache": "^1.0",
-        "symfony/framework-bundle": "^2.7|^3.0|^4.0",
-        "symfony/form": "^2.7|^3.0|^4.0",
-        "doctrine/orm": "^2.2.3"
+        "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
+        "symfony/form": "^3.4 || ^4.3 || ^5.0",
+        "doctrine/orm": "^2.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.6",
-        "mockery/mockery": "^0.9",
-        "doctrine/doctrine-bundle": "~1.2",
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "^1.3",
+        "doctrine/doctrine-bundle": "^1.12 || ^2.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
-        "matthiasnoback/symfony-dependency-injection-test": "^0.7"
+        "matthiasnoback/symfony-dependency-injection-test": "^4.1",
+        "nyholm/symfony-bundle-test": "^1.6",
+        "symfony/translation": "^4.4 || ^5.0"
     },
     "autoload": {
         "psr-4": { "Dmishh\\SettingsBundle\\": "" }
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "3.0.x-dev"
         }
     },
     "suggest": {
