--- a/Tests/Resources/app/config/config.yml
+++ b/Tests/Resources/app/config/config.yml
@@ -1,12 +1,14 @@
 framework:
-  secret: foobar
-  translator: ~
+    secret: foobar
+    translator: ~
 
 doctrine:
-  dbal:
-    driver: pdo_mysql
-  orm: ~
+    dbal:
+        driver: 'pdo_pgsql'
+        server_version: '10'
+    orm:
+        auto_mapping: true
 
 dmishh_settings:
-  settings:
-    my_first_setting: ~
+    settings:
+        my_first_setting: ~
