--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,3 +3,6 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - .
+    excludes_analyse:
+        - vendor
+        - Tests
