--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "nyholm/symfony-bundle-test": "^1.6",
         "symfony/translation": "^4.4 || ^5.0",
+        "symfony/security-core": "^4.4 || ^5.0",
         "twig/twig": "^2.0 || ^3.0"
     },
     "autoload": {
