--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
           env: SYMFONY_VERSION=4.3.*
         - php: 7.4
           env: SYMFONY_VERSION=5.0.*
+        - php: 8.0
+          env: SYMFONY_VERSION=5.2.*
 
 
 install:
