--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "psr/cache": "^1.0",
         "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
         "symfony/form": "^3.4 || ^4.3 || ^5.0",
