--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "psr/cache": "^1.0",
-        "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
-        "symfony/form": "^3.4 || ^4.3 || ^5.0",
-        "doctrine/orm": "^2.6"
+        "php": "^7.2|^8.0",
+        "psr/cache": "^1.0|^2.0",
+        "symfony/framework-bundle": "^4.4 || ^5.0",
+        "symfony/form": "^4.4 || ^5.0",
+        "doctrine/orm": "^2.6",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
