modify test config to test lowest versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,37 @@ jobs:
       uses: docker://jakzal/phpqa
       with:
         args: phpstan analyze
-  phpunit:
+  test:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-            php: ['7.2', '7.3', '7.4', '8.0']
-            symfony: ['3.4.*', '4.3.*', '5.0.*', '5.2.*']
+            php: ['7.2', '7.4', '8.0']
+            symfony: ['4.4.*', '5.3.*']
     name: Symfony ${{ matrix.symfony }} on PHP ${{ matrix.php }}  tests
     steps:
         -   uses: actions/checkout@v2
-        -   uses: shivammathur/setup-php@v1
+        -   uses: shivammathur/setup-php@v2
             with:
                 php-version: ${{ matrix.php }}
                 coverage: none # disable xdebug, pcov
         -   run: composer require symfony/framework-bundle:${{ matrix.symfony }} --no-update
         -   run: composer require symfony/form:${{ matrix.symfony }} --no-update
         -   run: composer install
-        -   run: vendor/bin/phpunit
+        -   run: make test
+  test-lowest:
+    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+            php: ['7.2', '7.3']
+            symfony: ['3.4.*', '4.4.*']
+    name: Symfony ${{ matrix.symfony }} on PHP ${{ matrix.php }}  tests
+    steps:
+        -   uses: actions/checkout@v2
+        -   uses: shivammathur/setup-php@v2
+            with:
+                php-version: ${{ matrix.php }}
+                coverage: none # disable xdebug, pcov
+        -   run: composer require symfony/framework-bundle:${{ matrix.symfony }} --no-update
+        -   run: composer require symfony/form:${{ matrix.symfony }} --no-update
+        -   run: composer install
+        -   run: make test-lowest
