--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "psr/cache": "^1.0",
         "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
         "symfony/form": "^3.4 || ^4.3 || ^5.0",
-        "doctrine/orm": "^2.6"
+        "doctrine/orm": "^2.6.3|^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
