--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     "require": {
         "php": "^7.2|^8.0",
         "psr/cache": "^1.0",
-        "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
-        "symfony/form": "^3.4 || ^4.3 || ^5.0",
-        "doctrine/orm": "^2.6.3|^2.7"
+        "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0" || ^6.0",
+        "symfony/form": "^3.4 || ^4.3 || ^5.0" || ^6.0",
+        "doctrine/orm": "^2.6.3|^2.7|^2.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
@@ -33,8 +33,8 @@
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "nyholm/symfony-bundle-test": "^1.6",
-        "symfony/translation": "^4.4 || ^5.0",
-        "symfony/security-core": "^4.4 || ^5.0",
+        "symfony/translation": "^4.4 || ^5.0" || ^6.0",
+        "symfony/security-core": "^4.4 || ^5.0" || ^6.0",
         "twig/twig": "^2.0 || ^3.0"
     },
     "autoload": {
