* Fixing PhpUnit deprecations * Upgrading nyholm/symfony-bundle-test * Fixing PhpStan configuration

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,6 +6,7 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - .
-    excludes_analyse:
+    excludePaths:
+        - tmp-phpqa
         - vendor
         - Tests
