--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-        colors                      = "true"
-        convertErrorsToExceptions   = "true"
-        convertNoticesToExceptions  = "true"
-        convertWarningsToExceptions = "true"
-        processIsolation            = "false"
-        stopOnFailure               = "false"
-        bootstrap                   = "./vendor/autoload.php" >
-
-    <testsuites>
-        <testsuite name="SettingsBundle Test Suite">
-            <directory>./Tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <php>
-        <ini name="opcache.load_comments" value="1" />
-        <ini name="zend_optimizerplus.load_comments" value="1" />
-    </php>
-
-    <filter>
-        <whitelist>
-            <directory>./</directory>
-            <exclude>
-                <directory>./Resources</directory>
-                <directory>./Tests</directory>
-            </exclude>
-        </whitelist>
-    </filter>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false"
+         bootstrap="./vendor/autoload.php"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory>./</directory>
+    </include>
+    <exclude>
+      <directory>./Resources</directory>
+      <directory>./Tests</directory>
+    </exclude>
+  </coverage>
+  <testsuites>
+    <testsuite name="SettingsBundle Test Suite">
+      <directory>./Tests</directory>
+    </testsuite>
+  </testsuites>
+  <php>
+    <ini name="opcache.load_comments" value="1"/>
+    <ini name="zend_optimizerplus.load_comments" value="1"/>
+  </php>
 </phpunit>
