feat: changes for symfony 6

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- https://phpunit.readthedocs.io/en/9.0/configuration.html -->
+<!-- https://phpunit.readthedocs.io/en/9.5/configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          colors="true"
          bootstrap="./vendor/autoload.php"
-         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd">
+         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+>
+
   <coverage>
     <include>
       <directory>./Controller</directory>
@@ -18,13 +20,16 @@
       <directory>./Twig</directory>
     </include>
   </coverage>
+
   <testsuites>
     <testsuite name="SettingsBundle Test Suite">
       <directory>./Tests</directory>
     </testsuite>
   </testsuites>
+
   <php>
     <ini name="opcache.load_comments" value="1"/>
     <ini name="zend_optimizerplus.load_comments" value="1"/>
   </php>
+
 </phpunit>
