Fix for SettingsController service being private with Symfony 4.4

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -29,3 +29,4 @@ services:
             - ~ # template
             - ~ # manage own settings
             - ~ # security role
+        public: true
